--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
             bottom: 0;
             overflow: auto;
         }
+
         #preview>div {
             margin: 1em;
         }
+
         #source {
             width: 100%;
         }
@@ -54,22 +56,57 @@
     </form>
 
     <xml xmlns="https://developers.google.com/blockly/xml" id="toolbox" style="display: none">
-        <block type="controls_if"></block>
-        <block type="logic_compare"></block>
-        <block type="controls_repeat_ext"></block>
-        <block type="math_number">
-            <field name="NUM">123</field>
-        </block>
-        <block type="math_arithmetic"></block>
-        <block type="text"></block>
-        <block type="text_print"></block>
+        <category name="制御構造">
+            <category name="条件" colour="%{BKY_LOGIC_HUE}">
+                <block type="controls_if"></block>
+                <block type="logic_compare"></block>
+            </category>
+            <category name="繰り返し" colour="%{BKY_LOOPS_HUE}">
+                <block type="controls_repeat_ext"></block>
+            </category>
+        </category>
+        <category name="数値" colour="%{BKY_MATH_HUE}">
+            <block type="math_number">
+                <field name="NUM">1</field>
+            </block>
+            <block type="math_arithmetic"></block>
+        </category>
+        <category name="文字" colour="%{BKY_TEXTS_HUE}">
+            <block type="text"></block>
+            <block type="text_print"></block>
+        </category>
+        <category name="変数" colour="%{BKY_VARIABLES_HUE}" custom="VARIABLE">
+        </category>
+        <category name="関数" colour="%{BKY_PROCEDURES_HUE}" custom="PROCEDURE">
+        </category>
     </xml>
 
     <script>
         var workspace = Blockly.inject('blocklyDiv',
             {
                 media: 'media/',
-                toolbox: document.getElementById('toolbox')
+                toolbox: document.getElementById('toolbox'),
+                collapse: false,
+                trashcan: false,
+                grid:
+                {
+                    spacing: 12, //間隔
+                    length: 12, //線の長さ
+                    colour: '#eee', //線の色
+                    snap: true //ブロックを
+                },
+                zoom:
+                {
+                    controls: true, //拡大、縮小、元のサイズボタンを表示
+                    wheel: false, // マウスホイールでの拡大縮小有効
+                    startScale: 2, //初期倍率
+                    maxScale: 3, //最大倍率
+                    minScale: 0.5, //最小倍率
+                    scaleSpeed: 1.2 //ズームするスピード
+                },
+                horizontalLayout: true,
+                toolboxPosition: 'end',
+                scrollbars: false
             });
         var source = document.getElementById('source'); //ソース表示先
         var language = document.getElementById('language'); //言語選択のselectタグ
