コメント修正

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     spacing: 12, //間隔
                     length: 12, //線の長さ
                     colour: '#eee', //線の色
-                    snap: true //ブロックを
+                    snap: true //ブロックをそろえる
                 },
                 zoom:
                 {
